@@ -2,6 +2,7 @@
 [add] audio only to quality selection
 [add] age gate enforcement - Settings -> General
 [add] allow offensive content - Settings -> General
+[add] quick search and quick search (incognito) to Settings -> Folders
 [fix/upd] use select dialog for subtitle settings
     - [add] Configure subtitles to Settings -> General
     - [add] Current language with No auto-generated subtitles option
